<resources>
    <string name="app_name">BackStackAndLaunchMode</string>
    <string name="btn_standard">Standard</string>
    <string name="btn_single_top">Single Top</string>
    <string name="btn_single_task">Single Task</string>
    <string name="btn_single_task_affinity">Single Task Affinity</string>
    <string name="btn_single_instance">Single Instance</string>
    <string name="btn_dialog">Dialog</string>
    <string name="tv_hint_text">Current Time</string>
</resources>